add logger interface

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Klisl\\Widgets\\": "src"
+            "Serega170584\\PSR3\\": "src"
         }
     }
 }
